--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -2,20 +2,15 @@ user root;
 worker_processes 4;
 daemon off;
 #worker_rlimit_nofile
-error_log /dev/stdout info;
+error_log /dev/stderr info;
 pid /var/run/nginx.pid;
 
 events {
     worker_connections 2048;
     #multi_accept on;
-    #use
 }
 
 http {
-    #perl_modules perl/lib;
-
-    #perl_set $server_name_from_env 'sub { return $ENV{"SERVER_NAME"}; }';
-
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -50,7 +45,7 @@ http {
 
     server {
         listen 8080;
-        server_name  elasticsearch;
+        server_name {{ var "SERVER_NAME" }};
         client_max_body_size 50M;
 
         location / {
@@ -62,8 +57,8 @@ http {
             }
 
 
-            # Pass requests to ElasticSearch
-            proxy_pass http://localhost:9200/;
+            # Pass requests to Backend
+            proxy_pass {{ var "BACKEND_URL" }};
             proxy_redirect off;
 
             proxy_set_header  X-Real-IP  $remote_addr;
@@ -78,14 +73,14 @@ http {
             add_header Access-Control-Allow-Credentials true;
 
             # Authorize access
-            auth_basic           "ElasticSearch";
+            auth_basic           "Authentication";
             auth_basic_user_file /etc/nginx/basic_auth_users;
         }
 
         location /status {
             proxy_method HEAD;
             proxy_intercept_errors on;
-            proxy_pass http://localhost:9200/;
+            proxy_pass {{ var "BACKEND_URL" }};
         }
     }
 
