--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -69,8 +69,11 @@ http {
             proxy_pass_header Access-Control-Allow-Origin;
             proxy_pass_header Access-Control-Allow-Methods;
             proxy_hide_header Access-Control-Allow-Headers;
-            add_header Access-Control-Allow-Headers 'X-Requested-With, Content-Type';
+            add_header Access-Control-Allow-Origin $http_origin;
+            add_header Access-Control-Allow-Methods 'OPTIONS, HEAD, GET, POST, PUT, DELETE';
+            add_header Access-Control-Allow-Headers 'Authorization, X-Requested-With, Content-Type';
             add_header Access-Control-Allow-Credentials true;
+
 
             # Authorize access
             auth_basic           "Authentication";
