--- a/files/nginx.conf.tmpl
+++ b/files/nginx.conf.tmpl
@@ -71,7 +71,7 @@ http {
             proxy_hide_header Access-Control-Allow-Headers;
             add_header Access-Control-Allow-Origin $http_origin;
             add_header Access-Control-Allow-Methods 'OPTIONS, HEAD, GET, POST, PUT, DELETE';
-            add_header Access-Control-Allow-Headers 'Authorization, X-Requested-With, Content-Type';
+            add_header Access-Control-Allow-Headers 'Authorization, X-Requested-With, Content-Type, Content-Length';
             add_header Access-Control-Allow-Credentials true;
 
 
